starknet/escrow/tests/jest.setup.js
// Jest setup file
global.console = {
  ...console,
  // Uncomment to ignore a specific log level
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};

// Increase timeout for all tests
jest.setTimeout(120000); 